Improve admin panel UI with premium design and logos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -667,12 +667,20 @@
                 Soliq va moliya olamida tartib va aniqlik. Biz har bir
                 tiyiningizni hisoblab beramiz.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '01',
+                    'Buxgalteriya',
+                    'Soliq hisoboti, moliyaviy tahlil va buxgalteriya xizmatlari. Biz sizning moliyaviy ishlaringizni professional darajada boshqaramiz. Soliq deklaratsiyalari, balans hisobotlari, moliyaviy audit va konsultatsiya xizmatlarini taqdim etamiz.',
+                    'https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
 
             <div
@@ -701,12 +709,20 @@
                 Investitsiya va birja operatsiyalari bo'yicha professional
                 maslahatlar.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '02',
+                    'Brokerlik',
+                    'Investitsiya va moliyaviy bozor bo\'yicha professional maslahat. Birja savdolari, qimmatli qog\'ozlar, investitsiya portfeli boshqaruvi va moliyaviy strategiya ishlab chiqish xizmatlarini taqdim etamiz.',
+                    'https://images.unsplash.com/photo-1590283603385-17ffb3a7f29f?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
 
             <div
@@ -735,12 +751,20 @@
                 Biznesingizni raqamli dunyo bilan bog'laymiz. Dasturlash va
                 kiber xavfsizlik.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '03',
+                    'IT Xizmatlari',
+                    'Veb-sayt, mobil ilova va dasturiy ta\'minot ishlab chiqish. Biznesingiz uchun zamonaviy texnologik yechimlar, kiber xavfsizlik, cloud xizmatlar va IT infrastruktura qurish bo\'yicha xizmatlar.',
+                    'https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
 
             <div
@@ -769,12 +793,20 @@
                 Xodimlarni professional darajaga ko'tarish va malaka
                 shaklantirish programmalari.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '04',
+                    'Malaka Oshirish',
+                    'Xodimlarni professional darajaga ko\'tarish va malaka shaklantirish programmalari. Kadrlar tanlash, HR konsalting, treninglar va xodimlarni boshqarish bo\'yicha keng qamrovli xizmatlar.',
+                    'https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
 
             <div
@@ -803,12 +835,20 @@
                 Biznesni ro'yxatga olish, ruxsatnoma va litsenziya olishda
                 amaliy yordam berish.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '05',
+                    'Litsenziya Yordam',
+                    'Biznesni ro\'yxatga olish, ruxsatnoma va litsenziya olishda amaliy yordam berish. Huquqiy maslahat, hujjatlarni tayyorlash va davlat organlari bilan ishlash bo\'yicha to\'liq qo\'llab-quvvatlash.',
+                    'https://images.unsplash.com/photo-1589829545856-d10d557cf95f?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
 
             <div
@@ -837,12 +877,20 @@
                 Energiya sarfini optimallashtirish va xarajatlarni 30% gacha
                 tejash.
               </p>
-              <a
-                href="#boglanish"
-                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2"
-                ><span data-lang-key="btn_more">Batafsil</span>
-                <i class="fas fa-arrow-right text-xs"></i
-              ></a>
+              <button
+                onclick="
+                  openServiceModal(
+                    '06',
+                    'Energiya Audit',
+                    'Energiya sarfini optimallashtirish va xarajatlarni 30% gacha tejash. Energiya audit, samaradorlik tahlili va energiya tejash bo\'yicha amaliy tavsiyalar berish xizmatlari.',
+                    'https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?auto=format&fit=crop&q=80&w=800',
+                  )
+                "
+                class="text-red-600 font-bold uppercase tracking-widest text-xs border-b-2 border-red-600 pb-1 hover:text-red-700 transition-colors inline-flex items-center gap-2 cursor-pointer"
+              >
+                <span data-lang-key="btn_more">Batafsil</span>
+                <i class="fas fa-arrow-right text-xs"></i>
+              </button>
             </div>
           </div>
 
@@ -1397,7 +1445,7 @@
           <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
             <!-- Telegram -->
             <a
-              href="https://t.me/yourusername"
+              href="https://t.me/Magzuna_consult_mchj"
               target="_blank"
               class="group text-center bg-white hover:bg-red-50 p-6 lg:p-8 rounded-2xl transition-all duration-300 shadow-lg hover:shadow-xl border border-gray-100 hover:-translate-y-1"
               data-aos="fade-up"
@@ -1413,13 +1461,13 @@
                 Telegram
               </h3>
               <div class="text-red-600 font-semibold text-xs lg:text-sm">
-                @yourusername
+                @Magzuna_consult_mchj
               </div>
             </a>
 
             <!-- Instagram -->
             <a
-              href="https://instagram.com/yourusername"
+              href="https://instagram.com/magzuna_consult"
               target="_blank"
               class="group text-center bg-white hover:bg-red-50 p-6 lg:p-8 rounded-2xl transition-all duration-300 shadow-lg hover:shadow-xl border border-gray-100 hover:-translate-y-1"
               data-aos="fade-up"
@@ -1436,13 +1484,13 @@
                 Instagram
               </h3>
               <div class="text-red-600 font-semibold text-xs lg:text-sm">
-                @yourusername
+                @magzuna_consult
               </div>
             </a>
 
             <!-- Email -->
             <a
-              href="mailto:info@magzuna.uz"
+              href="mailto:info@magzunaconsult.uz"
               class="group text-center bg-white hover:bg-red-50 p-6 lg:p-8 rounded-2xl transition-all duration-300 shadow-lg hover:shadow-xl border border-gray-100 hover:-translate-y-1"
               data-aos="fade-up"
               data-aos-delay="200"
@@ -1458,13 +1506,13 @@
                 Email
               </h3>
               <div class="text-red-600 font-semibold text-xs lg:text-sm">
-                info@magzuna.uz
+                info@magzunaconsult.uz
               </div>
             </a>
 
             <!-- Telefon -->
             <a
-              href="tel:+998901234567"
+              href="tel:+998997742722"
               class="group text-center bg-white hover:bg-red-50 p-6 lg:p-8 rounded-2xl transition-all duration-300 shadow-lg hover:shadow-xl border border-gray-100 hover:-translate-y-1"
               data-aos="fade-up"
               data-aos-delay="300"
@@ -1481,7 +1529,7 @@
                 Telefon
               </h3>
               <div class="text-red-600 font-semibold text-xs lg:text-sm">
-                +998 90 123 45 67
+                +998 99 774 2722
               </div>
             </a>
           </div>
@@ -1564,7 +1612,7 @@
                 <i class="fab fa-telegram text-sm"></i>
               </a>
               <a
-                href="https://instagram.com/yourusername"
+                href="https://instagram.com/magzuna_consult"
                 aria-label="Instagram"
                 class="w-10 h-10 bg-gray-800/80 backdrop-blur rounded-xl flex items-center justify-center hover:bg-gradient-to-br hover:from-red-600 hover:to-red-700 transition-all duration-300 hover:scale-110 hover:shadow-lg hover:shadow-red-600/20"
               >
@@ -1819,6 +1867,179 @@
         </div>
       </div>
     </footer>
+
+    <!-- Service Detail Modal -->
+    <div
+      id="serviceModal"
+      class="fixed inset-0 bg-black/50 hidden z-[100] flex items-center justify-center p-4 backdrop-blur-sm overflow-y-auto"
+    >
+      <div
+        class="bg-white rounded-3xl shadow-2xl max-w-2xl w-full my-8 animate-scale-in overflow-hidden"
+      >
+        <!-- Service Header -->
+        <div class="relative h-64 overflow-hidden">
+          <img
+            id="serviceModalImage"
+            src=""
+            alt=""
+            class="w-full h-full object-cover"
+          />
+          <div
+            class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent"
+          ></div>
+          <button
+            onclick="closeServiceModal()"
+            class="absolute top-4 right-4 w-10 h-10 bg-white/20 backdrop-blur-sm rounded-full flex items-center justify-center text-white hover:bg-white/30 transition"
+          >
+            <i class="fas fa-times"></i>
+          </button>
+          <div class="absolute bottom-6 left-6 right-6">
+            <span id="serviceModalNumber" class="text-red-400 font-bold text-sm"
+              >01</span
+            >
+            <h2
+              id="serviceModalTitle"
+              class="text-3xl font-black text-white mt-1"
+            >
+              Xizmat nomi
+            </h2>
+          </div>
+        </div>
+
+        <!-- Service Content -->
+        <div class="p-8">
+          <p
+            id="serviceModalDesc"
+            class="text-gray-600 text-lg leading-relaxed mb-8"
+          >
+            Xizmat tavsifi...
+          </p>
+
+          <!-- Features -->
+          <div class="grid grid-cols-2 gap-4 mb-8">
+            <div class="flex items-center gap-3 p-4 bg-gray-50 rounded-xl">
+              <div
+                class="w-10 h-10 bg-red-100 rounded-lg flex items-center justify-center"
+              >
+                <i class="fas fa-check text-red-600"></i>
+              </div>
+              <span class="text-gray-700 font-medium">Professional xizmat</span>
+            </div>
+            <div class="flex items-center gap-3 p-4 bg-gray-50 rounded-xl">
+              <div
+                class="w-10 h-10 bg-red-100 rounded-lg flex items-center justify-center"
+              >
+                <i class="fas fa-clock text-red-600"></i>
+              </div>
+              <span class="text-gray-700 font-medium">Tez bajarish</span>
+            </div>
+            <div class="flex items-center gap-3 p-4 bg-gray-50 rounded-xl">
+              <div
+                class="w-10 h-10 bg-red-100 rounded-lg flex items-center justify-center"
+              >
+                <i class="fas fa-headset text-red-600"></i>
+              </div>
+              <span class="text-gray-700 font-medium"
+                >24/7 qo'llab-quvvatlash</span
+              >
+            </div>
+            <div class="flex items-center gap-3 p-4 bg-gray-50 rounded-xl">
+              <div
+                class="w-10 h-10 bg-red-100 rounded-lg flex items-center justify-center"
+              >
+                <i class="fas fa-shield-alt text-red-600"></i>
+              </div>
+              <span class="text-gray-700 font-medium">Kafolat beramiz</span>
+            </div>
+          </div>
+
+          <!-- Order Form -->
+          <div id="serviceOrderSection" class="border-t border-gray-200 pt-8">
+            <h3 class="text-xl font-bold text-gray-900 mb-4">Zakaz berish</h3>
+
+            <!-- Not logged in message -->
+            <div
+              id="orderLoginRequired"
+              class="hidden bg-yellow-50 border border-yellow-200 rounded-xl p-6 text-center"
+            >
+              <div
+                class="w-16 h-16 bg-yellow-100 rounded-full flex items-center justify-center mx-auto mb-4"
+              >
+                <i class="fas fa-lock text-yellow-600 text-2xl"></i>
+              </div>
+              <p class="text-yellow-800 font-medium mb-4">
+                Zakaz berish uchun tizimga kirishingiz kerak
+              </p>
+              <button
+                onclick="
+                  closeServiceModal();
+                  openAuthModal('login');
+                "
+                class="bg-red-600 text-white px-6 py-3 rounded-xl font-bold hover:bg-red-700 transition"
+              >
+                <i class="fas fa-sign-in-alt mr-2"></i>Kirish
+              </button>
+            </div>
+
+            <!-- Order Form (for logged in users) -->
+            <form
+              id="serviceOrderForm"
+              class="hidden space-y-4"
+              onsubmit="submitOrder(event)"
+            >
+              <input type="hidden" id="orderServiceName" value="" />
+              <input type="hidden" id="orderServiceNumber" value="" />
+
+              <div>
+                <label class="block text-sm font-bold text-gray-700 mb-2">
+                  <i class="fas fa-phone text-red-600 mr-2"></i>Telefon
+                  raqamingiz
+                </label>
+                <input
+                  type="tel"
+                  id="orderPhoneNumber"
+                  required
+                  placeholder="+998 90 123 45 67"
+                  class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none transition"
+                />
+              </div>
+
+              <div>
+                <label class="block text-sm font-bold text-gray-700 mb-2">
+                  <i class="fas fa-comment text-red-600 mr-2"></i>Qisqacha
+                  tavsif
+                </label>
+                <textarea
+                  id="orderUserDescription"
+                  required
+                  rows="4"
+                  placeholder="Xizmat haqida qo'shimcha ma'lumot yoki so'rovingizni yozing..."
+                  class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none transition resize-none"
+                ></textarea>
+              </div>
+
+              <div
+                id="orderFormError"
+                class="hidden bg-red-50 border border-red-200 text-red-600 px-4 py-3 rounded-xl text-sm"
+              ></div>
+              <div
+                id="orderFormSuccess"
+                class="hidden bg-green-50 border border-green-200 text-green-600 px-4 py-3 rounded-xl text-sm"
+              ></div>
+
+              <button
+                type="submit"
+                id="orderSubmitBtn"
+                class="w-full bg-red-600 text-white py-4 rounded-xl font-bold hover:bg-red-700 transition flex items-center justify-center gap-2"
+              >
+                <i class="fas fa-paper-plane"></i>
+                Zakaz yuborish
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Login Modal -->
     <div
