--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -150,6 +150,15 @@
             <span>Dashboard</span>
           </a>
           <a
+            href="#orders"
+            onclick="showSection('orders')"
+            class="nav-link flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-300"
+          >
+            <i class="fas fa-shopping-cart w-5"></i>
+            <span>Zakazlar</span>
+            <span id="ordersBadge" class="ml-auto bg-red-500 text-white text-xs px-2 py-0.5 rounded-full hidden">0</span>
+          </a>
+          <a
             href="#users"
             onclick="showSection('users')"
             class="nav-link flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-300"
@@ -611,6 +620,131 @@
           </div>
         </section>
 
+        <!-- Orders Section -->
+        <section id="ordersSection" class="p-6 hidden">
+          <!-- Orders Stats -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4 mb-6">
+            <div class="bg-white rounded-2xl p-5 shadow-sm border border-gray-100">
+              <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-blue-600 rounded-xl flex items-center justify-center">
+                  <i class="fas fa-shopping-cart text-white"></i>
+                </div>
+                <div>
+                  <p class="text-2xl font-bold text-gray-900" id="statTotalOrders">0</p>
+                  <p class="text-xs text-gray-500">Jami zakazlar</p>
+                </div>
+              </div>
+            </div>
+            <div class="bg-white rounded-2xl p-5 shadow-sm border border-gray-100">
+              <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-gradient-to-br from-yellow-500 to-yellow-600 rounded-xl flex items-center justify-center">
+                  <i class="fas fa-clock text-white"></i>
+                </div>
+                <div>
+                  <p class="text-2xl font-bold text-gray-900" id="statPendingOrders">0</p>
+                  <p class="text-xs text-gray-500">Kutilmoqda</p>
+                </div>
+              </div>
+            </div>
+            <div class="bg-white rounded-2xl p-5 shadow-sm border border-gray-100">
+              <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-gradient-to-br from-blue-400 to-blue-500 rounded-xl flex items-center justify-center">
+                  <i class="fas fa-spinner text-white"></i>
+                </div>
+                <div>
+                  <p class="text-2xl font-bold text-gray-900" id="statInProgressOrders">0</p>
+                  <p class="text-xs text-gray-500">Jarayonda</p>
+                </div>
+              </div>
+            </div>
+            <div class="bg-white rounded-2xl p-5 shadow-sm border border-gray-100">
+              <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-gradient-to-br from-green-500 to-green-600 rounded-xl flex items-center justify-center">
+                  <i class="fas fa-check text-white"></i>
+                </div>
+                <div>
+                  <p class="text-2xl font-bold text-gray-900" id="statCompletedOrders">0</p>
+                  <p class="text-xs text-gray-500">Bajarilgan</p>
+                </div>
+              </div>
+            </div>
+            <div class="bg-white rounded-2xl p-5 shadow-sm border border-gray-100">
+              <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-gradient-to-br from-red-500 to-red-600 rounded-xl flex items-center justify-center">
+                  <i class="fas fa-times text-white"></i>
+                </div>
+                <div>
+                  <p class="text-2xl font-bold text-gray-900" id="statCancelledOrders">0</p>
+                  <p class="text-xs text-gray-500">Bekor qilingan</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Orders Filter -->
+          <div class="bg-white rounded-2xl p-4 shadow-sm mb-6 flex flex-col md:flex-row items-center gap-4">
+            <div class="flex items-center gap-3 w-full md:w-auto">
+              <div class="relative flex-1 md:w-80">
+                <i class="fas fa-search absolute left-4 top-1/2 -translate-y-1/2 text-gray-400"></i>
+                <input
+                  type="text"
+                  id="orderSearchInput"
+                  placeholder="Qidirish..."
+                  class="w-full pl-12 pr-4 py-2 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none transition"
+                />
+              </div>
+              <select
+                id="orderStatusFilter"
+                class="px-4 py-2 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none transition"
+              >
+                <option value="">Barcha status</option>
+                <option value="pending">Kutilmoqda</option>
+                <option value="in_progress">Jarayonda</option>
+                <option value="completed">Bajarilgan</option>
+                <option value="cancelled">Bekor qilingan</option>
+              </select>
+            </div>
+            <button
+              onclick="loadOrders()"
+              class="w-full md:w-auto bg-gray-100 text-gray-700 px-6 py-2 rounded-xl font-medium hover:bg-gray-200 transition flex items-center justify-center gap-2"
+            >
+              <i class="fas fa-sync-alt"></i>
+              Yangilash
+            </button>
+          </div>
+
+          <!-- Orders Table -->
+          <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+            <div class="overflow-x-auto">
+              <table class="w-full">
+                <thead class="bg-gray-50">
+                  <tr>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Xizmat</th>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Mijoz</th>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Telefon</th>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Tavsif</th>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Status</th>
+                    <th class="text-left py-4 px-6 text-sm font-semibold text-gray-600">Sana</th>
+                    <th class="text-right py-4 px-6 text-sm font-semibold text-gray-600">Amallar</th>
+                  </tr>
+                </thead>
+                <tbody id="ordersTableBody">
+                  <!-- Filled by JS -->
+                </tbody>
+              </table>
+            </div>
+            
+            <!-- Empty State -->
+            <div id="ordersEmptyState" class="hidden py-12 text-center">
+              <div class="w-20 h-20 bg-gray-100 rounded-full flex items-center justify-center mx-auto mb-4">
+                <i class="fas fa-shopping-cart text-gray-400 text-3xl"></i>
+              </div>
+              <h3 class="text-lg font-semibold text-gray-900 mb-2">Zakazlar yo'q</h3>
+              <p class="text-gray-500 text-sm">Hozircha hech qanday zakaz mavjud emas</p>
+            </div>
+          </div>
+        </section>
+
         <!-- Settings Section -->
         <section id="settingsSection" class="p-6 hidden">
           <div class="max-w-2xl">
@@ -835,6 +969,105 @@
               O'chirish
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Order Detail Modal -->
+    <div
+      id="orderModal"
+      class="fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center p-4 backdrop-blur-sm"
+    >
+      <div class="bg-white rounded-2xl shadow-2xl max-w-lg w-full p-6 max-h-[90vh] overflow-y-auto">
+        <div class="flex items-center justify-between mb-6">
+          <h2 class="text-xl font-bold text-gray-900">Zakaz tafsilotlari</h2>
+          <button
+            onclick="closeOrderModal()"
+            class="text-gray-400 hover:text-gray-600 transition"
+          >
+            <i class="fas fa-times text-xl"></i>
+          </button>
+        </div>
+
+        <div class="space-y-4">
+          <!-- Service Info -->
+          <div class="bg-gray-50 rounded-xl p-4">
+            <div class="flex items-center gap-3 mb-3">
+              <div class="w-10 h-10 bg-red-100 rounded-lg flex items-center justify-center">
+                <i class="fas fa-briefcase text-red-600"></i>
+              </div>
+              <div>
+                <p class="text-xs text-gray-500">Xizmat</p>
+                <p class="font-semibold text-gray-900" id="orderServiceName">-</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Customer Info -->
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500 mb-2">Mijoz ma'lumotlari</p>
+            <div class="space-y-2">
+              <div class="flex items-center gap-2">
+                <i class="fas fa-user text-gray-400 w-5"></i>
+                <span class="text-gray-900" id="orderCustomerName">-</span>
+              </div>
+              <div class="flex items-center gap-2">
+                <i class="fas fa-envelope text-gray-400 w-5"></i>
+                <span class="text-gray-900" id="orderCustomerEmail">-</span>
+              </div>
+              <div class="flex items-center gap-2">
+                <i class="fas fa-phone text-gray-400 w-5"></i>
+                <span class="text-gray-900 font-semibold" id="orderPhone">-</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Description -->
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500 mb-2">Tavsif</p>
+            <p class="text-gray-900" id="orderDescription">-</p>
+          </div>
+
+          <!-- Status -->
+          <div class="flex items-center justify-between">
+            <span class="text-sm text-gray-600">Status:</span>
+            <select
+              id="orderStatusSelect"
+              class="px-4 py-2 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none transition text-sm font-medium"
+            >
+              <option value="pending">Kutilmoqda</option>
+              <option value="in_progress">Jarayonda</option>
+              <option value="completed">Bajarilgan</option>
+              <option value="cancelled">Bekor qilingan</option>
+            </select>
+          </div>
+
+          <!-- Date -->
+          <div class="flex items-center justify-between text-sm">
+            <span class="text-gray-600">Yaratilgan:</span>
+            <span class="text-gray-900" id="orderCreatedAt">-</span>
+          </div>
+        </div>
+
+        <div class="flex gap-3 mt-6 pt-4 border-t border-gray-200">
+          <button
+            onclick="closeOrderModal()"
+            class="flex-1 px-4 py-3 border-2 border-gray-200 rounded-xl font-medium hover:bg-gray-50 transition"
+          >
+            Yopish
+          </button>
+          <button
+            onclick="updateOrderStatus()"
+            class="flex-1 bg-red-600 text-white px-4 py-3 rounded-xl font-medium hover:bg-red-700 transition"
+          >
+            Saqlash
+          </button>
+          <button
+            onclick="deleteCurrentOrder()"
+            class="px-4 py-3 bg-gray-100 text-red-600 rounded-xl font-medium hover:bg-red-50 transition"
+          >
+            <i class="fas fa-trash"></i>
+          </button>
         </div>
       </div>
     </div>
