--- a/frontend/index.html
+++ b/frontend/index.html
@@ -339,10 +339,13 @@
       </div>
     </nav>
 
+    <!-- Navbar spacer for fixed navbar -->
+    <div id="navbarSpacer" class="w-full"></div>
+
     <main>
       <section
         id="asosiy"
-        class="min-h-screen flex items-center relative px-6 hero-bg pattern-dots pt-24 pb-16"
+        class="min-h-screen flex items-center relative px-6 hero-bg pattern-dots pb-16"
       >
         <div class="w-full max-w-screen-2xl mx-auto">
           <!-- Decorative shapes background -->
