--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2064,7 +2064,7 @@
                 <div
                   class="w-10 h-10 bg-gradient-to-br from-red-500 to-red-600 rounded-lg flex items-center justify-center shadow-sm flex-shrink-0"
                 >
-                  <i class="fas fa-shield-check text-white text-sm"></i>
+                  <i class="fas fa-shield-halved text-white text-sm"></i>
                 </div>
                 <div class="min-w-0">
                   <p
@@ -2339,7 +2339,7 @@
                 <div
                   class="w-8 h-8 bg-gradient-to-br from-red-500 to-red-600 rounded-lg flex items-center justify-center shadow-sm flex-shrink-0"
                 >
-                  <i class="fas fa-shield-check text-white text-xs"></i>
+                  <i class="fas fa-shield-halved text-white text-xs"></i>
                 </div>
                 <p
                   class="font-semibold text-gray-900 text-xs leading-tight"
