--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2304,7 +2304,7 @@
                 </div>
                 <p
                   class="font-semibold text-gray-900 text-xs leading-tight"
-                  data-lang-key="feature_professional"
+                  data-lang-key="feature_professional_short"
                 >
                   Professional
                 </p>
@@ -2317,7 +2317,7 @@
                 </div>
                 <p
                   class="font-semibold text-gray-900 text-xs leading-tight"
-                  data-lang-key="feature_fast"
+                  data-lang-key="feature_fast_short"
                 >
                   Tezkor
                 </p>
@@ -2330,7 +2330,7 @@
                 </div>
                 <p
                   class="font-semibold text-gray-900 text-xs leading-tight"
-                  data-lang-key="feature_support"
+                  data-lang-key="feature_support_short"
                 >
                   24/7 Yordam
                 </p>
@@ -2343,7 +2343,7 @@
                 </div>
                 <p
                   class="font-semibold text-gray-900 text-xs leading-tight"
-                  data-lang-key="feature_guarantee"
+                  data-lang-key="feature_guarantee_short"
                 >
                   Kafolat
                 </p>
