--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1959,7 +1959,7 @@
         </div>
 
         <!-- Right: Content Section (65%) -->
-        <div class="flex-1 h-full flex flex-col bg-gray-50">
+        <div class="flex-1 h-full flex flex-col bg-gray-50 min-h-0">
           <!-- Header -->
           <div
             class="bg-white border-b border-gray-100 px-8 py-5 flex-shrink-0"
@@ -1976,7 +1976,9 @@
           </div>
 
           <!-- Main Content - Scrollable -->
-          <div class="flex-1 px-8 py-6 overflow-y-auto desktop-scroll-area">
+          <div
+            class="flex-1 px-8 py-6 overflow-y-auto desktop-scroll-area min-h-0"
+          >
             <!-- Description -->
             <div class="mb-6">
               <p
