--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -215,9 +215,9 @@
                   <div class="stat-card-icon primary">
                     <i class="fas fa-shopping-bag"></i>
                   </div>
-                  <div class="stat-card-trend up">
+                  <div class="stat-card-trend up" id="statTotalOrdersTrend">
                     <i class="fas fa-arrow-up"></i>
-                    12%
+                    <span>0%</span>
                   </div>
                 </div>
                 <div class="stat-card-value" id="statTotalOrders">0</div>
@@ -229,9 +229,9 @@
                   <div class="stat-card-icon blue">
                     <i class="fas fa-clock"></i>
                   </div>
-                  <div class="stat-card-trend up">
+                  <div class="stat-card-trend up" id="statNewOrdersTrend">
                     <i class="fas fa-arrow-up"></i>
-                    8%
+                    <span>0%</span>
                   </div>
                 </div>
                 <div class="stat-card-value" id="statNewOrders">0</div>
@@ -243,13 +243,13 @@
                   <div class="stat-card-icon green">
                     <i class="fas fa-check-circle"></i>
                   </div>
-                  <div class="stat-card-trend up">
+                  <div class="stat-card-trend up" id="statCompletedOrdersTrend">
                     <i class="fas fa-arrow-up"></i>
-                    15%
+                    <span>0%</span>
                   </div>
                 </div>
                 <div class="stat-card-value" id="statCompletedOrders">0</div>
-                <div class="stat-card-label">Bajarilgan</div>
+                <div class="stat-card-label">Yakunlangan zakazlar</div>
               </div>
 
               <div class="stat-card">
@@ -257,9 +257,9 @@
                   <div class="stat-card-icon purple">
                     <i class="fas fa-users"></i>
                   </div>
-                  <div class="stat-card-trend up">
+                  <div class="stat-card-trend up" id="statTotalUsersTrend">
                     <i class="fas fa-arrow-up"></i>
-                    5%
+                    <span>0%</span>
                   </div>
                 </div>
                 <div class="stat-card-value" id="statTotalUsers">0</div>
@@ -447,6 +447,8 @@
                     <option value="10">10 ta</option>
                     <option value="25">25 ta</option>
                     <option value="50">50 ta</option>
+                    <option value="100">100 ta</option>
+                    <option value="all">Hammasi</option>
                   </select>
                   <button class="pagination-btn" id="prevPage" disabled>
                     <i class="fas fa-chevron-left"></i>
