--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,9 +131,10 @@
               title="O'zbekcha"
             >
               <img
-                src="https://flagcdn.com/w20/uz.png"
+                src="https://flagcdn.com/w40/uz.png"
+                srcset="https://flagcdn.com/w80/uz.png 2x"
                 alt="UZ"
-                class="w-5 h-4 rounded-sm shadow"
+                class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
               />
               <span class="text-white text-xs font-bold">UZ</span>
             </button>
@@ -144,9 +145,10 @@
               title="Русский"
             >
               <img
-                src="https://flagcdn.com/w20/ru.png"
+                src="https://flagcdn.com/w40/ru.png"
+                srcset="https://flagcdn.com/w80/ru.png 2x"
                 alt="RU"
-                class="w-5 h-4 rounded-sm shadow"
+                class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
               />
               <span class="text-white text-xs font-bold">RU</span>
             </button>
@@ -157,9 +159,10 @@
               title="English"
             >
               <img
-                src="https://flagcdn.com/w20/gb.png"
+                src="https://flagcdn.com/w40/gb.png"
+                srcset="https://flagcdn.com/w80/gb.png 2x"
                 alt="EN"
-                class="w-5 h-4 rounded-sm shadow"
+                class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
               />
               <span class="text-white text-xs font-bold">EN</span>
             </button>
@@ -185,35 +188,38 @@
         <div class="lg:hidden flex items-center gap-0.5 mr-2">
           <button
             onclick="setLanguage('uz')"
-            class="mobile-lang-flag w-8 h-8 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
+            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
             data-lang="uz"
           >
             <img
-              src="https://flagcdn.com/w20/uz.png"
+              src="https://flagcdn.com/w40/uz.png"
+              srcset="https://flagcdn.com/w80/uz.png 2x"
               alt="UZ"
-              class="w-5 h-3.5 rounded-sm shadow"
+              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
             />
           </button>
           <button
             onclick="setLanguage('ru')"
-            class="mobile-lang-flag w-8 h-8 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
+            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
             data-lang="ru"
           >
             <img
-              src="https://flagcdn.com/w20/ru.png"
+              src="https://flagcdn.com/w40/ru.png"
+              srcset="https://flagcdn.com/w80/ru.png 2x"
               alt="RU"
-              class="w-5 h-3.5 rounded-sm shadow"
+              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
             />
           </button>
           <button
             onclick="setLanguage('en')"
-            class="mobile-lang-flag w-8 h-8 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
+            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
             data-lang="en"
           >
             <img
-              src="https://flagcdn.com/w20/gb.png"
+              src="https://flagcdn.com/w40/gb.png"
+              srcset="https://flagcdn.com/w80/gb.png 2x"
               alt="EN"
-              class="w-5 h-3.5 rounded-sm shadow"
+              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
             />
           </button>
         </div>
